force-app/main/default/objects/Lab_Provider__c/Lab_Provider__c.object-meta.xml
<CustomObject>
    <description>This object will hold all of the different lab providers that this company uses</description>
    <label>External Provider Configuration</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Lab Provider Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lab Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>