force-app/main/default/objects/Lab_Provider__c/fields/Available_APIs__c.field-meta.xml
<CustomField>
    <fullName>Available_APIs__c</fullName>
    <description>Since we support many different labs, not all of the lab providers support the same type of APIs. Whatever is in the Chosen column is what API calls that are available to the end users</description>
    <inlineHelpText>These are the APIs that this lab provider supports</inlineHelpText>
    <label>Available APIs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submit Order</fullName>
            </value>
            <value>
                <fullName>Update Order</fullName>
            </value>
            <value>
                <fullName>Cancel Order</fullName>
            </value>
            <value>
                <fullName>Upload Documents</fullName>
            </value>
            <value>
                <fullName>Swap Kits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>