force-app/main/default/objects/Lab_Provider__c/fields/Countries_Where_Lab_Is_Licensed__c.field-meta.xml
<CustomField>
    <fullName>Countries_Where_Lab_Is_Licensed__c</fullName>
    <description>This will be used with the State(s) Where Lab Is Licensed field to determine how to filter.</description>
    <label>Countries Where Lab Is Licensed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CANADA</fullName>
            </value>
            <value>
                <fullName>MEXICO</fullName>
            </value>
            <value>
                <fullName>UNITED STATES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>