force-app/main/default/objects/Lab_Provider__c/fields/Height_Conversion_Value__c.field-meta.xml
<CustomField>
    <fullName>Height_Conversion_Value__c</fullName>
    <formula>CASE(TEXT(Height_Conversion_Factor__c), &quot;inches (in)&quot;, 0, &quot;centimeters (cm)&quot;, 2.54, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Stores the numerical value used to convert height measurements based on the selected height conversion factor.</inlineHelpText>
    <label>Height Conversion Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>