force-app/main/default/objects/Lab_Provider__c/fields/Opportunity_Transaction_Source__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Transaction_Source__c</fullName>
    <label>Opportunity Transaction Source Depr</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Transaction_Source</valueSetName>
    </valueSet>
</CustomField>