force-app/main/default/objects/Lab_Provider__c/fields/Provided_Services__c.field-meta.xml
<CustomField>
    <fullName>Provided_Services__c</fullName>
    <description>What services the lab provider supports. As of today all of the labs only support one service but we made this allow multiple services</description>
    <label>Provided Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lab_Provided_Services</valueSetName>
    </valueSet>
</CustomField>