force-app/main/default/objects/Lab_Provider__c/fields/Weight_Conversion_Factor__c.field-meta.xml
<CustomField>
    <fullName>Weight_Conversion_Factor__c</fullName>
    <description>This will be used in automations to convert the patient weight that is stored on the opportunity line item to the correct value to be submitted via the API.</description>
    <inlineHelpText>Enter the factor to convert weight from pounds to the lab&apos;s required unit. Set once based on lab standards.</inlineHelpText>
    <label>Weight Conversion Factor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mass_Units</valueSetName>
    </valueSet>
</CustomField>