force-app/main/default/objects/Lab_Provider__c/fields/Weight_Conversion_Value__c.field-meta.xml
<CustomField>
    <fullName>Weight_Conversion_Value__c</fullName>
    <formula>CASE(
    TEXT(Weight_Conversion_Factor__c),
        &quot;lbs&quot;,0,
				    &quot;kilos&quot;,2.20462
				,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Stores the numerical value used to convert weight measurements based on the selected weight conversion factor.</inlineHelpText>
    <label>Weight Conversion Value</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>