force-app/main/default/objects/Lab_Provider__c/listViews/Active_Lab_Providers.listView-meta.xml
<ListView>
    <fullName>Active_Lab_Providers</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Include_In_Round_Robin__c</columns>
    <columns>Provided_Services__c</columns>
    <columns>Last_Used_On__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Opportunity_Transaction_Source_Multi__c</columns>
    <columns>States_Where_Lab_Is_Licensed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Lab Providers</label>
</ListView>